--- a/WebDev/Blog/views/home.ejs
+++ b/WebDev/Blog/views/home.ejs
@@ -5,14 +5,15 @@
         <%= para1 %>
     </p>
     <% for(var i=0; i < posts.length; i++) { %>
-        <a href="./post/<%=posts[i].title %>" style="text-decoration: none; color: inherit;">
+        <a href="./post/<%=posts[i]._id.valueOf() %>" style="text-decoration: none; color: inherit;">
             <h1>
                 <%=(posts[i].title) %>
+
             </h1>
         </a>
         <p>
             <%= posts[i].body.substring(0,100) + "..." %>
-                <a href="./post/<%=posts[i].title %>">
+                <a href="./post/<%=posts[i]._id.valueOf() %>">
 
                     Read more
 
