--- a/WebDev/Blog/views/partials/footer.ejs
+++ b/WebDev/Blog/views/partials/footer.ejs
@@ -1,9 +1,9 @@
-
 </div>
-<div class="footer-padding"></div>
-  <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
-  </div>
+<div class="footer-padding" style="margin-top: 20px;"></div>
+<div class="footer fixed-bottom" style="position: fixed;">
+  <p>Made with ❤️ by The App Brewery</p>
+</div>
 </div>
 </body>
+
 </html>
